<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcfcfc">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/scenery"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="-145dp"
        tools:layout_editor_absoluteY="54dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center_horizontal"
                android:text="@string/dashboard"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="174dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="#FCFCFC"
                    app:cardCornerRadius="45dp"
                    app:cardElevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="60dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="Today's Task"
                        android:textColor="#4B4B4B"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="85dp"
                        android:fontFamily="@font/poppins"
                        android:text="Monday, 27 September 2021"
                        android:textColor="#4b4b4b"
                        android:textSize="12sp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="315dp"
                        android:layout_height="119dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="48dp"
                        android:layout_marginTop="128dp"
                        android:outlineSpotShadowColor="#888888"
                        app:cardBackgroundColor="#FFFFFF"
                        app:cardCornerRadius="25dp"
                        app:cardElevation="40dp"
                        tools:targetApi="p">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="17dp"
                            android:layout_marginTop="25dp"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/daily_progress"
                            android:textColor="#4B4B4B"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="17dp"
                            android:layout_marginTop="47dp"
                            android:fontFamily="@font/poppins"
                            android:gravity="top"
                            android:lineSpacingExtra="9sp"
                            android:text="@string/progress"
                            android:textColor="#4B4B4B"
                            android:textSize="10sp" />

                        <ProgressBar
                            android:id="@+id/progressBar"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="match_parent"
                            android:layout_height="15dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="17dp"
                            android:layout_marginTop="75dp"
                            android:layout_marginRight="17dp"
                            android:max="100"
                            android:progress="60"
                            android:progressDrawable="@drawable/custom_progressbg" />

                    </androidx.cardview.widget.CardView>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="315dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="281dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_semibold"
                            android:gravity="center"
                            android:text="@string/upcoming"
                            android:textColor="#4B4B4B"
                            android:textSize="12sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.cardview.widget.CardView
                        android:layout_width="315dp"
                        android:layout_height="58dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="48dp"
                        android:layout_marginTop="325dp"
                        android:layout_marginRight="48dp"
                        android:outlineSpotShadowColor="#888888"
                        app:cardBackgroundColor="#FFFFFF"
                        app:cardCornerRadius="18dp"
                        app:cardElevation="40dp"
                        tools:targetApi="p">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="26dp"
                            android:layout_marginTop="14dp"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/midterm_exam"
                            android:textColor="#4b4b4b"
                            android:textSize="10sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="26dp"
                            android:layout_marginTop="30dp"
                            android:fontFamily="@font/poppins"
                            android:text="Today, 24.00 - 16.00"
                            android:textColor="#4b4b4b"
                            android:textSize="8sp" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="110dp"
                            android:layout_marginRight="20dp"
                            android:checked="true"
                            android:padding="10dp"
                            android:thumb="@drawable/thumb"
                            app:track="@drawable/track" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="315dp"
                        android:layout_height="58dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="48dp"
                        android:layout_marginTop="394dp"
                        android:layout_marginRight="48dp"
                        app:cardBackgroundColor="#FFFFFF"
                        android:outlineSpotShadowColor="#888888"
                        app:cardCornerRadius="18dp"
                        app:cardElevation="40dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="26dp"
                            android:layout_marginTop="14dp"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="Cleaning the House"
                            android:textColor="#4b4b4b"
                            android:textSize="10sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="26dp"
                            android:layout_marginTop="30dp"
                            android:fontFamily="@font/poppins"
                            android:text="Today, 20.00"
                            android:textColor="#4b4b4b"
                            android:textSize="8sp" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="110dp"
                            android:layout_marginRight="20dp"
                            android:checked="false"
                            android:padding="10dp"
                            android:thumb="@drawable/thumb"
                            app:track="@drawable/track" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="315dp"
                        android:layout_height="58dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="48dp"
                        android:layout_marginTop="463dp"
                        app:cardBackgroundColor="#FFFFFF"
                        android:outlineSpotShadowColor="#888888"
                        app:cardCornerRadius="18dp"
                        app:cardElevation="40dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="26dp"
                            android:layout_marginTop="14dp"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="Movie Night with Friend"
                            android:textColor="#4b4b4b"
                            android:textSize="10sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="26dp"
                            android:layout_marginTop="30dp"
                            android:fontFamily="@font/poppins"
                            android:text="Today, 22.10"
                            android:textColor="#4b4b4b"
                            android:textSize="8sp" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="110dp"
                            android:layout_marginRight="20dp"
                            android:checked="true"
                            android:padding="10dp"
                            android:thumb="@drawable/thumb"
                            app:track="@drawable/track" />

                    </androidx.cardview.widget.CardView>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <View
        android:layout_width="97dp"
        android:layout_height="79dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="625dp"
        android:background="@drawable/ic_newtaskicon"
        android:outlineSpotShadowColor="#888888"
        android:elevation="50dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="62dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:outlineSpotShadowColor="#888888"
        android:layout_marginBottom="0dp"
        app:cardElevation="40dp"
        app:menu="@menu/bottom_navigation_items"
        app:itemIconSize="24dp"
        app:labelVisibilityMode="unlabeled"
        android:background="#FCFCFC"
        app:itemIconTint="#4B4B4B">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>